--- a/15 - LocalStorage/css/style.css
+++ b/15 - LocalStorage/css/style.css
@@ -54,18 +54,18 @@
 
     }
 
-    .plates input {
+    /*.plates input {
       display: none;
-    }
+    }*/
 
-    .plates input + label:before {
-      content: '⬜️';
+    /*.plates input + label:before {
+      content: 'aaa';
       margin-right: 10px;
-    }
+    }*/
 
-    .plates input:checked + label:before {
-      content: '🌮';
-    }
+    /*.plates input:checked + label:before {
+      content: 'sss';
+    }*/
 
     .add-items {
       margin-top: 20px;
